Fixed followers waiting on socket.io

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ CLIENT_URL=http://localhost:8080
 PORT=5000
 MONGO_URI=mongodb+srv://patrickodey:$('peejay')@cluster0.ewe2l.mongodb.net/altire?retryWrites=true&w=majority
 SECRET_KEY=88@4BJB%DhjefBDW£febffbj84&&@f3u4fufjfbcr@ufvewgftyfedy!!tw%T
+AWS_ID="AKIARCBWRMYF4M3MLIX7"
+AWS_SECRET="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"
+AWS_BUCKET_NAME="altire"
