--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Patrick Odey",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1048.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -17,6 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
