--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
