--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
 NODE_ENV=development
-CLIENT_URL=http://localhost:8080
+CLIENT_URL=https://altire.kemango.com.ng/
 PORT=5000
 MONGO_URI=mongodb+srv://patrickodey:$('peejay')@cluster0.ewe2l.mongodb.net/altire?retryWrites=true&w=majority
 SECRET_KEY=88@4BJB%DhjefBDW£febffbj84&&@f3u4fufjfbcr@ufvewgftyfedy!!tw%T
 AWS_ID="AKIARCBWRMYF4M3MLIX7"
 AWS_SECRET="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"
 AWS_BUCKET_NAME="altire"
+EMAIL_FROM=noreply@altire.com
+EMAIL_TO=patrickjoseph2121@gmail.com
+JWT_RESET_PASSWORD=t643fgwtfh#f@ggew7tr23!!&&865y$grvgw43545%78u56u56757545363%
+MAIL_PASSWORD=patrickjoseph2121@gmail.com
+MAIL_USERNAME=altiredev@outlook.com
