--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.7.2",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
